2003-08-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken Kocienda.

	- fixed 3365242 - non-repro abort in HTMLTokenizer at ajc.com
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::write): ref the part around actually processing the
	data, since a script could cause the part to go away.

2003-08-12  David Hyatt  <hyatt@apple.com>

	Fix for 3262190, <li> bullets in mail were overly massive.  The bezier path the
	painter stroked was not setting the line width from QPen's width, so it ended up
	just using the current line width instead (which happened to be much larger in
	Mail).
	
        Reviewed by darin

        * kwq/KWQPainter.mm:
        (QPainter::drawEllipse):
        (QPainter::drawArc):
        (QPainter::_drawPoints):

2003-08-12  John Sullivan  <sullivan@apple.com>

	- fixed 3370614 -- REGRESSION (81-85): partial inline input from Japanese 
	input method can disappear

        Reviewed by Hyatt

        * khtml/rendering/render_form.cpp:
        (RenderLineEdit::updateFromElement):
	call w->text() before element()->value(), because w->text() has a side
	effect of updating element()->value() in the inline input case
        (RenderTextArea::updateFromElement):
	same for text areas

2003-08-12  David Hyatt  <hyatt@apple.com>

	Fix for 3374566, list bullets don't display if list-style-type is none but a list-style-image
	is specified.  The spec says list-style-type: none does not apply to list-style-image,
	and this fixes Microsoft's list bullet on their security pages.
	
        Reviewed by john

        * khtml/rendering/render_list.cpp:
        (RenderListItem::setStyle):

2003-08-12  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3226083 -- REGRESSION (Panther): white box overlaying select lists at nvidia.com drivers page

        * kwq/KWQListBox.mm: (QListBox::QListBox): Call releaseGState on the clip view
        that we make for the list box. This prevents the incorrect graphics state caching